# resuma

./: LICENSE  LICENSE.md  README.md  TERMS.md  TRADEMARK.md  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
.github/: FUNDING.yml
.github/workflows/: release.yml
src/: App.tsx  index.css  main.tsx
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  llm.rs  main.rs  rpc.rs
src/components/: Back.tsx  ConfirmationModal.tsx  DeleteConfirmation.tsx  LogoSplit.tsx  ResumePreview.tsx  ResumeWizard.tsx  Settings.tsx  Titlebar.tsx
src/components/Themes/: Compact.tsx  Modern.tsx  Professional.tsx
src/components/ui/: button.tsx  card.tsx  daterange.tsx  dialog.tsx  input.tsx  select.tsx  sonner.tsx  tabs.tsx  textarea.tsx
src/contexts/: LanguageContext.tsx  OnboardingContext.tsx  SystemContext.tsx
src/data/: models.json  runtimes.json
src/hooks/: useDownloadListeners.ts
src/lib/: checkAssetReady.ts  defaultSettings.ts  formatResumeTxt.ts  i18n.ts  llmUtils.ts  pdfFonts.ts  resolveModel.ts  resolveRuntime.ts  resumeUtils.ts  resumesStore.ts  selectRecommendedModel.ts  selectRecommendedRuntime.ts  store.ts  toastUtils.tsx  ui.ts
src/pages/: Editor.tsx  Home.tsx
src/pages/Editor/: AwardsEditor.tsx  EducationEditor.tsx  ExperienceEditor.tsx  PersonalEditor.tsx  ProjectsEditor.tsx  ResumeEditor.tsx  Sidebar.tsx  SkillsEditor.tsx
src/pages/Onboarding/: Artificial.tsx  Awards.tsx  Basic.tsx  Finish.tsx  (+7 more)
src/types/: download.ts  downloadStatus.ts  llm.ts
(+12 files in other folders)
