[package]
name = "Resuma"
version = "0.1.0"
description = "Resuma is an open-source desktop application for building beautiful, professional resumes using local AI models. Your data never leaves your device."
authors = ["Nikola Ranđelović <contact@nikolchaa.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "resuma_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-store = "2"
sysinfo = "0.34.2"
tauri-plugin-hwinfo = "0.2.0"
zip = "2.6.1"
reqwest = {version = "0.12.15", features= ["stream"] }
futures-util = "0.3.31"
dirs = "6.0.0"
discord-rich-presence = "0.2.5"
lazy_static = "1.5.0"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-prevent-default = { version = "2.0", features = ["unstable-windows"] }
dirs-next = "2.0.0"

